welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: not found: value versLAvant
  if (versLAvant){
      ^