welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvantT: Boolean){
  if (versLAvant){
    for (pas <-1 to nbPas){avance()}
  }
  else {
    for (pas <-1 to nbPas){recule()}
  }
}